deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kennedn-github-io
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kennedn-github-io
  template:
    metadata:
      labels:
        app: kennedn-github-io
    spec:
      containers:
      - image: nginx
        name: kennedn-github-io
        ports:
        - containerPort: 80
        volumeMounts:
        - name: web-data
          mountPath: /usr/share/nginx/html
      volumes:
      - name: web-data
        persistentVolumeClaim:
          claimName: kennedn-github-io
