service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kennedn-github-io
spec:
  ports:
  - port: 8080
    targetPort: 80
  selector:
    app: kennedn-github-io
