ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kennedn-github-io
  annotations:
    nginx.org/proxy-read-timeout: "3600"
    nginx.org/proxy-send-timeout: "3600"
    nginx.org/server-snippets: |
      location /socket.io {
        proxy_http_version 1.1;
        proxy_set_header Upgrade $http_upgrade;
        proxy_set_header Connection "upgrade";
      }
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - kennedn.com
    secretName: kennedn-github-io

  ingressClassName: public
  rules:
  - host: kennedn.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kennedn-github-io
            port:
              number: 80
      - path: /socket.io
        pathType: Prefix
        backend:
          service:
            name: livestats
            port:
              number: 5000
      - path: /bitwarden
        pathType: Prefix
        backend:
          service:
            name: vaultwarden-old
            port:
              number: 80
